--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ server.error.include-message=always
 spring.jackson.mapper.ACCEPT_CASE_INSENSITIVE_ENUMS = true
 spring.main.allow-circular-references=true
 ################# Mongo Related Constants #################
-default.mongo.uri={{your_mongo_url}}
-default.mongo.database={{your_mongo_database_name}}
+default.mongo.uri=mongodb+srv://mehulmina:prodo1234@cluster0.1i3xt.mongodb.net/?retryWrites=true&w=majority
+default.mongo.database=test-database
 default.mongo.connectionMaxIdleTimeMs=10000
 default.mongo.poolMaxSize=30
 logging.level.org.mongodb=warn
@@ -22,6 +22,6 @@ logging.level.org.springframework.boot.autoconfigure.mongo.embedded=warn
 
 
 jwt.secret=beastab2021
-msg91.authKey={{api_key}}
-msg91.sendOTP.url=https://api.msg91.com/api/v5/otp?template_id={{template_id}}&mobile=%s&authkey=%s
+msg91.authKey=366411AamHKyDckoqf6129d4c4P1
+msg91.sendOTP.url=https://api.msg91.com/api/v5/otp?template_id=62c2c993686eff1b09630536&mobile=%s&authkey=%s
 msg91.verifyOTP.url=https://api.msg91.com/api/v5/otp/verify?otp=%s&mobile=%s
